--- a/production/styles.scss
+++ b/production/styles.scss
@@ -1,4 +1,5 @@
 @charset 'UTF-8';
 
-@import './styles/l-footer';
+@import './styles/l-html';
 @import './styles/l-header';
+@import './styles/l-footer';
