--- a/production/styles.css
+++ b/production/styles.css
@@ -1,18 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
+/*@import './styles/l-html';
+@import './styles/l-header';
+@import './styles/l-main';
+@import './styles/l-footer';*/
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
-.Body {
-  width: auto;
-  height: auto;
-  margin: 0px;
-  padding: 0px;
-  background-color: white;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  font-family: "Bai Jamjuree", sans-serif;
-}
-
 .Body {
   width: auto;
   height: auto;
@@ -28,22 +19,25 @@
 .Header {
   width: auto;
   height: auto;
-  background-image: url(./images/bg-header-desktop.png);
+  background-image: url(../public/images/bg-header-desktop.png);
   background-image: 100%;
   background-repeat: no-repeat;
   padding: 110px;
   display: flex;
   align-items: center;
   flex-direction: column;
+  font-family: "Bai Jamjuree", sans-serif;
   font-size: 18px;
 }
-.Header img {
+.Header .logo {
   margin-bottom: 30px;
+  align-items: center;
 }
 .Header h1 {
   margin-bottom: 20px;
+  font-family: "Bai Jamjuree", sans-serif;
   color: hsl(210, 10%, 33%);
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
 }
 .Header p {
@@ -56,7 +50,6 @@
 .Header.botones {
   color: white;
   font-family: "Bai Jamjuree", sans-serif;
-  font-size: 1rem;
 }
 .Header.botones.btn-1 {
   width: 200px;
@@ -65,7 +58,7 @@
   border: 1px solid;
   border-radius: 50px;
   margin-right: 10px;
-  box-shadow: 0px 0px 0px 1px #61C4B5, 0px 10px 15px 1px #c2fced;
+  box-shadow: 0px 10px 15px 1px #c2fced;
   transition: all 500ms;
 }
 .Header.botones.btn-1:hover {
@@ -77,12 +70,12 @@
   color: #D7F7F4;
   background-color: #5DCCBB;
   border: 1px solid #5AC8B5;
-  box-shadow: 0px 0px 0px 1px #A0DDD4, 0px 10px 15 1px #D0F9EC;
+  box-shadow: 0px 10px 15 1px #D0F9EC;
 }
 .Header.botones.btn-2 {
   color: hsl(233, 100%, 69%);
   margin-left: 10px;
-  box-shadow: 0px 0px 0px 1px #8895E6, 0px 10px 15px 1px #DFE3F9;
+  box-shadow: 0px 10px 15px 1px #DFE3F9;
   transition: all 500ms;
 }
 .Header.botones.btn-2:hover {
@@ -90,9 +83,21 @@
   color: #EDF7FD;
   background-color: #8896FF;
   border: 1px solid #8493FA;
-  box-shadow: 0x 0px 0px 1px #B8C3F0, 0px 10px 15px 1px #EAEEF4;
+  box-shadow: 0px 10px 15px 1px #EAEEF4;
 }
 
+.Main {
+  font-family: "Bai Jamjuree", sans-serif;
+  padding: 110px;
+}
+.Main.parte1 {
+  display: flex;
+  text-align: center;
+}
+.Main.parte1h2 {
+  display: flex;
+  text-align: center;
+}
 .footer {
   background-color: rgb(245, 246, 248);
   color: rgb(111, 113, 116);
