--- a/production/styles.scss
+++ b/production/styles.scss
@@ -1,5 +1,177 @@
 @charset 'UTF-8';
 
-@import './styles/l-html';
+
+/*@import './styles/l-html';
 @import './styles/l-header';
-@import './styles/l-footer';
+@import './styles/l-main';
+@import './styles/l-footer';*/
+//colors
+$color1: hsl(171, 66%, 44%);
+$color2: hsl(233, 100%, 69%);
+$color3: hsl(210, 10%, 33%);
+$color4:hsl(201, 11%, 66%);
+$color5:white;
+//fonts 
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap');
+$fontSize:18px;
+$tipografia:'Bai Jamjuree', sans-serif;;
+
+.Body{
+    width: auto;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+    background-color: $color5;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: $tipografia;
+    
+}
+
+.Header{
+    
+    
+    width: auto;
+    height: auto;
+    background-image: url(../public/images/bg-header-desktop.png);
+    background-image: 100%;
+    background-repeat: no-repeat;
+
+        padding: 110px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        font-family: $tipografia;
+        font-size: $fontSize;
+
+        & .logo{
+            margin-bottom: 30px;
+            align-items: center;
+        }
+
+        & h1{
+            margin-bottom: 20px;
+            font-family: $tipografia;
+            color: $color3;
+            font-size: 3rem;
+            text-align: center;
+        }
+        
+        & p{
+            width: 70%;
+            margin-bottom: 40px;
+            color: #B0B6B6;
+            font-size: 1.5rem;
+            text-align: center;
+            
+        }
+        &.botones{
+            color:$color5;
+            font-family: $tipografia;
+            &.btn-1{
+                width: 200px;
+                height: 50px;
+                background-color:$color1;
+                border: 1px solid;
+                border-radius: 50px;
+                margin-right: 10px;
+                box-shadow: 0px 10px 15px 1px #c2fced;
+                transition: all 500ms;
+                &:hover {
+                    width: 200px;
+                    height: 50px;
+                    border: 1px solid;
+                    border-radius: 50px;
+                    cursor: pointer;
+                    color: #D7F7F4;
+                    background-color: #5DCCBB;
+                    border: 1px solid #5AC8B5;
+                    box-shadow: 0px 10px 15 1px #D0F9EC;
+                }
+            }
+            &.btn-2 {
+                color: $color2;
+                margin-left: 10px;
+                box-shadow: 0px 10px 15px 1px #DFE3F9;
+                transition: all 500ms;
+                &:hover {
+                cursor: pointer;
+                color: #EDF7FD;
+                background-color: #8896FF;
+                border: 1px solid #8493FA;
+                box-shadow:0px 10px 15px 1px #EAEEF4;
+                }
+            }
+        }
+    }
+//MAIN
+.Main{
+    font-family: $tipografia;
+    padding: 110px;
+    
+        &.parte1{
+            display: flex;
+            text-align: center;
+           
+            &h2{
+                display: flex;
+                text-align: center;
+
+            }
+            &p{
+
+            }
+
+
+        }
+    
+}
+
+
+
+
+
+//FOOTER
+$margin: 15px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
+.footer {
+    background-color: rgb(245, 246, 248);
+    color: rgb(111, 113, 116);
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 10px 1fr;
+    gap: 20px; 
+    justify-content: center;
+     font-family: 'Poppins', sans-serif;
+    
+   & .logo2 {
+    margin-top: $margin;
+    
+   } 
+   & .section2{
+    margin-top: $margin;
+   
+   }
+   & .section3 {
+    margin-top: $margin;
+   }
+   & .section4 {
+    margin-top: $margin;
+   }
+   & .section5 {
+    grid-column: 6/7;
+    margin-top: $margin;
+    display: inline-flex;
+        & .iconos {
+            margin: 17px;   
+        }
+   }
+   & .section6 {
+    grid-column: 3/4;
+   }
+    
+}
+   
+
