--- a/production/styles.css
+++ b/production/styles.css
@@ -43,7 +43,7 @@
 .Header p {
   width: 60%;
   margin-bottom: 40px;
-  color: #B0B6B6;
+  color: hsl(201, 11%, 66%);
   font-size: 18px;
   text-align: center;
 }
@@ -58,7 +58,7 @@
   border: 1px solid;
   border-radius: 50px;
   margin-right: 10px;
-  box-shadow: 0px 10px 15px 1px #c2fced;
+  box-shadow: 0px 10px 15px 1px;
   transition: all 500ms;
 }
 .Header.botones.btn-1:hover {
@@ -68,7 +68,7 @@
   border-radius: 50px;
   cursor: pointer;
   color: #D7F7F4;
-  background-color: #5DCCBB;
+  background-color: hsl(171, 66%, 44%);
   border: 1px solid #5AC8B5;
   box-shadow: 0px 10px 15 1px #D0F9EC;
 }
@@ -80,9 +80,9 @@
 }
 .Header.botones.btn-2:hover {
   cursor: pointer;
-  color: #EDF7FD;
-  background-color: #8896FF;
-  border: 1px solid #8493FA;
+  color: white;
+  background-color: hsl(233, 100%, 69%);
+  border: 1px solid;
   box-shadow: 0px 10px 15px 1px #EAEEF4;
 }
 
@@ -106,16 +106,56 @@
   margin-bottom: 20px;
   font-family: "Bai Jamjuree", sans-serif;
   font-size: 2rem;
-  color: #4F575C;
+  color: hsl(210, 10%, 33%);
   text-align: center;
 }
 .Main .encabezado p {
   width: 50%;
   margin-top: auto;
-  color: #B3B8B8;
+  color: hsl(201, 11%, 66%);
   text-align: center;
   font-style: 18px;
   font-family: "Bai Jamjuree", sans-serif;
+}
+.Main.article:first-child {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: auto;
+  margin: auto;
+}
+.Main.article:first-child.img {
+  grid-column: 1/2;
+  height: 750px;
+  padding-top: 50px;
+}
+.Main.article:first-child.info {
+  grid-column: 2/3;
+  width: 50%;
+  height: 750px;
+  padding-top: 50px;
+  display: flex;
+  align-items: normal;
+}
+.Main.article:first-child.info h3 {
+  width: auto;
+  height: auto;
+  color: hsl(210, 10%, 33%);
+  font-size: 18px;
+  font-family: "Bai Jamjuree", sans-serif;
+  margin-bottom: 20px;
+  padding-left: 20px;
+}
+.Main.article:first-child.info p {
+  width: 50%;
+  height: auto;
+  margin-top: 0px;
+  margin-bottom: 30px;
+  font-size: 15px;
+  color: hsl(201, 11%, 66%);
+  font-family: "Bai Jamjuree", sans-serif;
+  padding-left: 20px;
+  text-align: left;
 }
 
 .footer {
