--- a/production/styles.scss
+++ b/production/styles.scss
@@ -61,7 +61,7 @@ $tipografia:'Bai Jamjuree', sans-serif;;
         & p{
             width: 60%;
             margin-bottom: 40px;
-            color: #B0B6B6;
+            color: $color4;
             font-size: $fontSize;
             text-align: center;
             
@@ -76,7 +76,7 @@ $tipografia:'Bai Jamjuree', sans-serif;;
                 border: 1px solid;
                 border-radius: 50px;
                 margin-right: 10px;
-                box-shadow: 0px 10px 15px 1px #c2fced;
+                box-shadow: 0px 10px 15px 1px ;
                 transition: all 500ms;
                 &:hover {
                     width: 200px;
@@ -85,7 +85,7 @@ $tipografia:'Bai Jamjuree', sans-serif;;
                     border-radius: 50px;
                     cursor: pointer;
                     color: #D7F7F4;
-                    background-color: #5DCCBB;
+                    background-color: $color1;
                     border: 1px solid #5AC8B5;
                     box-shadow: 0px 10px 15 1px #D0F9EC;
                 }
@@ -97,9 +97,9 @@ $tipografia:'Bai Jamjuree', sans-serif;;
                 transition: all 500ms;
                 &:hover {
                 cursor: pointer;
-                color: #EDF7FD;
-                background-color: #8896FF;
-                border: 1px solid #8493FA;
+                color: $color5;
+                background-color: $color2;
+                border: 1px solid;
                 box-shadow:0px 10px 15px 1px #EAEEF4;
                 }
             }
@@ -126,7 +126,7 @@ $tipografia:'Bai Jamjuree', sans-serif;;
             margin-bottom: 20px;
             font-family: $tipografia;
             font-size: 2rem;
-            color: #4F575C;
+            color: $color3;
             text-align: center;
 
         }
@@ -134,18 +134,59 @@ $tipografia:'Bai Jamjuree', sans-serif;;
             width: 50%;
             margin-top: auto;
         
-            color: #B3B8B8;
+            color: $color4;
             text-align: center;
             font-style: $fontSize;
             font-family: $tipografia;
 
-
-
         }
     
     }
+    &.article:first-child{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+        height: auto;
+        margin: auto;
+        &.img{
+            grid-column: 1/2;
+            height: 750px;
+            padding-top: 50px;
+
+        }
+        &.info{
+            grid-column: 2/3;
+            width: 50%;
+            height: 750px;
+            padding-top: 50px;
+            display: flex;
+            align-items: normal;
+            & h3{
+                width: auto;
+                height: auto;
+                color: $color3;
+                font-size: 18px;
+                font-family: $tipografia;
+                margin-bottom: 20px;
+                padding-left: 20px;
+            }
+            & p{
+                width: 50%;
+                height: auto;
+                margin-top: 0px;
+                margin-bottom: 30px;
+                font-size: 15px;
+                color: $color4;
+                font-family: $tipografia;
+                padding-left: 20px;
+                text-align: left;
+                }
+        
+            }
+        }
+    }
     
-}
+
 
   
 
