--- a/production/styles.css
+++ b/production/styles.css
@@ -1,12 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
-.main .section .parte2 {
-  background-color: azure;
-}
 .main .section .parte2 h1 {
-  font-size: 25px;
+  font-size: 30px;
+  font-size: 30px;
   font-weight: bolder;
-  color: pink;
+  display: flex;
+  justify-content: center;
+}
+.main .section .parte2 p {
+  display: flex;
+  justify-content: center;
+}
+.main .section .parte3 h1 {
+  font-size: 30px;
+  margin-top: 50px;
+  font-weight: bolder;
+  display: flex;
+  justify-content: center;
+}
+.main .section .parte3 p {
+  display: flex;
+  justify-content: center;
 }
 
 /*@import './styles/l-html';
