--- a/production/styles.css
+++ b/production/styles.css
@@ -158,7 +158,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin: auto;
+  margin-left: -5%;
 }
 .Main .parte-1 .pc {
   width: 40%;
@@ -217,24 +217,42 @@
   height: auto;
   align-items: center;
 }
-.Main .blacklist h3, .Main .text h3, .Main .preview h3 {
+.Main .parte-3 {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+}
+.Main .parte-3 .blacklists, .Main .parte-3 .text, .Main .parte-3 .preview {
+  width: 30%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  height: 230px;
+  justify-content: center;
+}
+.Main .parte-3 .blacklists img, .Main .parte-3 .text img, .Main .parte-3 .preview img {
+  width: 20%;
+  padding-right: 20%;
+}
+.Main .parte-3 .blacklists h3, .Main .parte-3 .text h3, .Main .parte-3 .preview h3 {
+  width: 80%;
   height: auto;
   margin-bottom: 5px;
   color: hsl(210, 10%, 33%);
   font-family: "Bai Jamjuree", sans-serif;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
-.Main .blacklist p, .Main .text p, .Main .preview p {
+.Main .parte-3 .blacklists p, .Main .parte-3 .text p, .Main .parte-3 .preview p {
   margin-top: 5px;
   width: 80%;
   font-family: "Bai Jamjuree", sans-serif;
-  font-size: 15px;
+  font-size: 1rem;
   color: hsl(201, 11%, 66%);
 }
 .Main .logos {
+  width: 100%;
   height: auto;
-  display: flex;
-  flex-direction: row;
 }
 .Main .clipboard {
   width: 100%;
@@ -286,12 +304,120 @@
 
 @media (max-width: 375px) {
   .Main .encabezado {
-    padding: 5px;
-    padding-top: 50px;
+    padding: 0px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin: 0;
+    margin-bottom: 20px;
   }
   .Main .encabezado h2 {
     font-size: 1.5rem;
-    padding: 20px;
+    padding-top: 20px;
+  }
+  .Main .encabezado p {
+    font-size: 15px;
+    width: 80%;
+    margin: 0px;
+    padding: 0px;
+  }
+  .Main .parte-1 {
+    display: block;
+    justify-content: center;
+  }
+  .Main .parte-1 .pc img {
+    width: 80%;
+    margin-left: 10%;
+  }
+  .Main .parte-1 .derecha {
+    width: 100%;
+    padding: 0px;
+    padding-bottom: 0px;
+    margin: 0;
+    text-align: center;
+    justify-content: center;
+  }
+  .Main .parte-1 .derecha h3 {
+    width: 80%;
+  }
+  .Main .parte-1 .derecha p {
+    width: 80%;
+    text-align: center;
+    justify-content: center;
+  }
+  .Main .parte-2 {
+    padding-left: 15%;
+    width: 100%;
+  }
+  .Main .parte-2 img {
+    justify-content: center;
+    width: 80%;
+  }
+  .Main .parte-2 h3 {
+    width: 80%;
+    margin: 0;
+    padding: 0;
+  }
+  .Main .parte-2 p {
+    width: 80%;
+    padding: 5px;
+    text-align: center;
+    justify-content: center;
+  }
+  .Main .parte-3 {
+    display: block;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    justify-content: center;
+  }
+  .Main .parte-3 .blacklists, .Main .parte-3 .text, .Main .parte-3 .preview {
+    width: 80%;
+    padding: 0px;
+    padding-left: 10%;
+    margin: 0px;
+  }
+  .Main .parte-3 .blacklists h3, .Main .parte-3 .text h3, .Main .parte-3 .preview h3 {
+    width: 100%;
+  }
+  .Main .parte-3 .blacklists p, .Main .parte-3 .text p, .Main .parte-3 .preview p {
+    width: 100%;
+  }
+  .Main .logos img {
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 150px;
+  }
+  .Main .clipboard {
+    padding: 0px;
+    padding-top: 40px;
+    margin: 0;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .Main .clipboard h3 {
+    width: 80%;
+    font-size: 1.5rem;
+    padding-top: 20px;
+    text-align: center;
+  }
+  .Main .clipboard p {
+    width: 80%;
+    font-size: 15px;
+    margin: 0px;
+    padding: 0px;
+  }
+  .Main .clipboard .btn-1 {
+    width: 90%;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+  }
+  .Main .clipboard .btn-2 {
+    width: 90%;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
   }
 }
 .footer {
